Fix: Cards images not showing when seeing details of collected card

--- a/starlight/static/less/style.less
+++ b/starlight/static/less/style.less
@@ -262,6 +262,16 @@ html {
     }
 }
 
+/* Collected card and memoir */
+
+.collectedcard-info, .collectedmemoir-info {
+    [data-field="card"], [data-field="memoir"] {
+        .text_with_link {
+            max-width: 50%;
+        }
+    }
+}
+
 /* Act */
 
 .panel.act {
